# Parallel-Image-FIltering

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  Makefile_old  Makefile_old2  Makefile~  README.md  TODOlist.txt  TODOlist.txt~  avg_test.sh  difference.sh  multiStats.sh  multiStats2.sh  multiStatsMultiNodes.sh  results_original.txt  run_multi_images_gifs.sh~  run_one_image_gif.sh  run_test.sh  set_env.sh  sobelf  stats  stats.sh  stats2  stats2.sh  statsMultiNodes.sh  timeReference.txt
CUDAproject/: CUDAproject.sln
images/: compare.sh  compare.sh~  composite.sh  null  results.txt  results.txt~
mandelbrot/: Makefile  eztrace_output.trace.trace  log.txt  mandelbrot.c  mandelbrot.c~  mandelbrot_gui_seq  mandelbrot_omp  mandelbrot_seq
report/: .nfs0000000000501a3a0000003d  bare_conf_compsoc.aux  bare_conf_compsoc.tex  ref.bib  report.aux  report.bbl  report.blg  report.tex
src/: .#parallelBlur.c  MPI_blur_filter.c  MPI_blur_filter.h  a.out  communDef.c  communDef.h  communDef.h~  cudaKernel.cu  cudaKernel.cu~  cudaKernel.h  cudaKernel.h~  dgif_lib.c  egif_lib.c  gif_hash.c  gif_hash.h  main.c  main.cu  main.cu~  main.c~  main2.c  mainForStats.c  mainStatic.c  main_old.c  parallelBlur.c  parallelBlur.h  parallelSplitMPI.c  parallelSplitMPI.cu  parallelSplitMPI.cu~  parallelSplitMPI.c~  parallelSplitMPI.h  parallelSplitMPI.h~  stats.c  stats.c~  stats2.c
stats2Result/: resultMPIblur_10_0.txt  resultMPIblur_12_0.txt  resultMPIblur_15_0.txt  resultMPIblur_20_0.txt  resultMPIblur_2_0.txt  resultMPIblur_3_0.txt  resultMPIblur_4_0.txt  resultMPIblur_50_0.txt  (+5 more)
(+84 files in other folders)
